#1184 - fix some colour contrast issues with dark themes & gap fill drag & drop activities

--- a/themes/Nottingham/highcontrast/highcontrast.css
+++ b/themes/Nottingham/highcontrast/highcontrast.css
@@ -9,8 +9,7 @@
 /*1vmin;*/
 /*2vmin;*/
 /*3px 3px 5px grey*/
-/*start here and set the default values for all the variables*/
-/******Header******/
+/*start here and set the default values for all the variables*/ /******Header******/
 #x_headerBlock {
   color: #ffffff;
   background-repeat: no-repeat;
@@ -350,6 +349,19 @@ div.infoHolder.ui-tabs.ui-widget.ui-widget-content.ui-corner-all {
   color: #ffffff;
 }
 
+.x_gapFill_page #targetHolder .target.answerShown {
+  color: #ffffff;
+}
+
+.x_gapFill_page #targetHolder.outline .target.highlight {
+  border: 1px dashed #ffffff;
+}
+
+.x_gapFill_page #targetHolder.underline .target.highlight {
+  border-bottom: 1px solid #ffffff;
+  border-top: 1px solid transparent;
+}
+
 a.hotspot, a.hotspot.selected {
   background: none;
 }
@@ -664,43 +676,43 @@ table.headerCol.shaded td.header {
 }
 
 #x_nextBtn:not(.customIconBtn) .ui-icon:before {
-  content: "";
+  content: "\f138";
 }
 
 #x_prevBtn:not(.customIconBtn) .ui-icon:before {
-  content: "";
+  content: "\f137";
 }
 
 #x_cssBtn:not(.customIconBtn) .ui-icon:before {
-  content: "";
+  content: "\f066";
 }
 
 #x_colourChangerBtn:not(.customIconBtn) .ui-icon:before {
-  content: "";
+  content: "\f042";
 }
 
 #x_mediaBtn:not(.customIconBtn) .ui-icon:before {
-  content: "";
+  content: "\f16a";
 }
 
 #x_glossaryBtn:not(.customIconBtn) .ui-icon:before {
-  content: "";
+  content: "\f02d";
 }
 
 #x_helpBtn:not(.customIconBtn) .ui-icon:before {
-  content: "";
+  content: "\f128";
 }
 
 #x_introBtn:not(.customIconBtn) .ui-icon:before {
-  content: "";
+  content: "\f129";
 }
 
 #x_menuBtn:not(.customIconBtn) .ui-icon:before {
-  content: "";
+  content: "\f0c9";
 }
 
 #x_saveSessionBtn:not(.customIconBtn) .ui-icon:before {
-  content: "";
+  content: "\f0c7";
 }
 
 #x_footerBlock button {
@@ -812,7 +824,6 @@ table.headerCol.shaded td.header {
   #x_footerProgress {
     display: block;
   }
-
   #x_pageNo {
     vertical-align: top;
     text-align: center;
@@ -824,18 +835,15 @@ table.headerCol.shaded td.header {
     z-index: 100;
     font-size: 12px;
   }
-
   #x_footerBlock button {
     font-size: 1em;
     width: 1em;
     margin-left: 5px;
   }
-
   .pbContainer {
     display: block;
     margin-top: 1.2em;
   }
-
   .pbTxt {
     display: block;
     font-size: 6px;
@@ -1420,8 +1428,7 @@ span.x_glossary, span.x_glossary:link, span.x_glossary:visited, span.x_glossary:
   background: #000000;
   border-top-right-radius: 3px;
   border-bottom-left-radius: 3px;
-  border: none !important;
-  /*remove this to restore the default border*/
+  border: none !important; /*remove this to restore the default border*/
 }
 
 #x_pageDiv {
